namespacing CSS/JS to avoid conflicts

--- a/public/css/events-public.css
+++ b/public/css/events-public.css
@@ -13,4 +13,6 @@
 
 /* events
 ------------------------------*/
-
+.wp-spg-events div.google-calendar {
+	text-align: center;
+}
